# mma_meson_demo

./: .gitignore  README.md  README.org  config.wls  meson.build
mma/: algorithm1_mma.cpp  config.wls  meson.build  myLib.wl  myLib_mma.cpp
sandbox/: demo_sparse.wls  demo_sparse_manual.wls  sparseDemoPackageTest.wls
src/: demo_sparse.cpp  meson.build  sparseDemoPackage.wl
src/myLib/: algorithm1.cpp  algorithm1.hpp  meson.build
