demo_sparse_sources = ['demo_sparse.cpp']

shared_library('demo_sparse',
	       sources: [demo_sparse_sources],
	       include_directories: mma_include_directories,
	       install: true,
	       install_dir: mma_library_install_dir)

install_data('sparseDemoPackage.wl',
	     install_dir: mma_package_install_dir )
	     
